diesel_compile_tests/tests/fail/cannot_load_default_select_with_group_by.stderr
error[E0271]: type mismatch resolving `<columns::name as IsContainedInGroupBy<columns::id>>::Output == diesel::expression::is_contained_in_group_by::Yes`
    --> tests/fail/cannot_load_default_select_with_group_by.rs:16:32
     |
16   |         .load::<(i32, String)>(&mut conn);
     |          ----                  ^^^^^^^^^ type mismatch resolving `<columns::name as IsContainedInGroupBy<columns::id>>::Output == diesel::expression::is_contained_in_group_by::Yes`
     |          |
     |          required by a bound introduced by this call
     |
note: expected this to be `diesel::expression::is_contained_in_group_by::Yes`
    --> tests/fail/cannot_load_default_select_with_group_by.rs:8:9
     |
8    |         name -> Text,
     |         ^^^^
note: required for `columns::id` to implement `ValidGrouping<columns::name>`
    --> tests/fail/cannot_load_default_select_with_group_by.rs:7:9
     |
7    |         id -> Integer,
     |         ^^
     = note: 1 redundant requirement hidden
     = note: required for `(columns::id, columns::name)` to implement `ValidGrouping<columns::name>`
     = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::NoLimitClause, diesel::query_builder::offset_clause::NoOffsetClause>, diesel::query_builder::group_by_clause::GroupByClause<columns::name>>` to implement `Query`
     = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::NoLimitClause, diesel::query_builder::offset_clause::NoOffsetClause>, diesel::query_builder::group_by_clause::GroupByClause<columns::name>>` to implement `LoadQuery<'_, _, (i32, std::string::String)>`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> $DIESEL/src/query_dsl/mod.rs
     |
     |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `diesel::RunQueryDsl::load`
